syntax = "proto3";

option java_package = "ca.eandb.jmist.proto";
option java_outer_classname = "LightProtos";

import "jmist/proto/core.proto";

message PointLight {
  Vector3 position = 1;
}

message AreaLight {
  Vector3 center = 1;
  Vector3 u = 2;
  Vector3 v = 3;
  double size_u = 4;
  double size_v = 5;
}

message DirectionalLight {
  Vector3 direction = 1;
}

message Light {
  double energy = 1;
  Color color = 2;
  bool shadow = 3;

  oneof parameters {
    PointLight point_light = 4;
    AreaLight area_light = 5;
    DirectionalLight directional_light = 6;
  }
}
